# climaclass

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/climaclass/: __init__.py  _types.py  holdridge.py  koppen.py  thornthwaite.py  viz.py
src/climaclass/integrations/: __init__.py  symfluence.py
tests/: test_classifications.py  test_symfluence_adapter.py
