[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climaclass"
version = "0.1.0"
description = "Classical climate classification (Koppen-Geiger, Holdridge, Thornthwaite) from monthly climatologies - pure Python, no Earth Engine required."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Darri Eythorsson" }]
keywords = ["climate", "koppen", "holdridge", "thornthwaite", "classification", "hydrology", "climatology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []  # core is pure standard-library Python

[project.optional-dependencies]
# Integration with the SYMFLUENCE hydrological-modelling framework.
symfluence = ["geopandas>=0.12", "rasterstats>=0.18"]
dev = ["pytest>=7", "ruff>=0.1", "numpy"]

[project.urls]
Homepage = "https://github.com/DarriEy/Climate_Classifications"
Source = "https://github.com/DarriEy/Climate_Classifications"

# Optional: expose the processor to SYMFLUENCE's plugin discovery via entry point.
[project.entry-points."symfluence.attribute_processors"]
climate_classification = "climaclass.integrations.symfluence:ClimateClassificationProcessor"

[tool.hatch.build.targets.wheel]
packages = ["src/climaclass"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
